sass/styles.scss
@charset "utf-8";
@import "../node_modules/bulma/bulma.sass";

html, body {
  overscroll-behavior-x: none;
}

$selection-color: lighten($primary, 30%);

body {
  height: 100vh;
  padding: 0;
  margin: 0;
}

#app {
  height: 100%;
}

div.app {
  display: flex;
  height: 100%;
}

.sidebar {
  padding: 10px;
  border-radius: 0;
}

.sidebar-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.sidebar-content {
  display: flex;
  flex-direction: column;
  row-gap: 5px;
}

.viewport {
  width: 100%;
}

.suggestions {
  position: absolute;
  top: 0px;
  display: flex;
  flex-wrap: wrap;
  row-gap: 10px;
  column-gap: 15px;
  padding: 0px 10px;
  line-height: 0;
  margin: 10px 0;
  pointer-events: none;
}

.key-suggestion {
  margin-right: 5px;
}

svg {
  display: block;
  width: 100%;
  height: 100%;

  .selected {
    filter: drop-shadow(0px 0px 5px $selection-color);
    stroke: $selection-color;
    stroke-width: 3;
  }

  .point {
    fill: hsl(204, 86%, 53%);
  }

  .add-point-button {
    fill: lighten(hsla(204, 86%, 53%, 50%), 30%);
  }

  .mesh-line {
    stroke: hsl(217, 71%, 53%);
  }
}

